# career-compass

./: pnpm-lock.yaml
apps/client/: package.json
apps/client/app/: page.tsx  trpc.ts
apps/roadmap_gen/: README.md  pyproject.toml  roadmap.json  roadmap.md
apps/roadmap_gen/src/roadmap_gen/: api.py  cli.py  crew.py  main.py
apps/roadmap_gen/src/roadmap_gen/config/: agents.yaml  tasks.yaml
apps/server/: bun.lockb  package.json  wrangler.jsonc
apps/server/src/: index.ts  router.ts
